# background-removal

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/app/: inference.py  main.py  routes.py
api/tests/: test_routes.py
frontend/: .env.production
frontend/src/: App.tsx  index.css
