[project]
name = "background-removal-api"
version = "0.1.0"
description = "Background removal API"
authors = [
    {name = "Kaan-wq",email = "kaanucar9@gmail.com"}
]
requires-python = ">=3.11.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
