[project]
name = "background-removal-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Kaan-wq",email = "kaanucar9@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "onnxruntime (==1.23.2)",
    "numpy (>=2.4.3,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "huggingface-hub (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.7,<0.16.0)"
]
